--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<html>
+    <head>
+        <title>TP web semantique</title>
+        <link rel="meta" type="application/rdf+xml" title="FOAF" href="foaf.rdf" /> 
+    </head>
+    <body>
+        Hello world
+    </body>
+</html>
